--- a/ain-react/package.json
+++ b/ain-react/package.json
@@ -38,6 +38,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:9999/",
   "devDependencies": {
     "@types/styled-components": "^5.1.34"
   }
