--- a/AInServer/ain/build.gradle
+++ b/AInServer/ain/build.gradle
@@ -37,11 +37,17 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	// postgrsql DB
 	runtimeOnly 'org.postgresql:postgresql'
-	
+	// devtools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// mybatis
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 	// junit
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 }
 
 tasks.named('test') {
