--- a/ain-react/package.json
+++ b/ain-react/package.json
@@ -40,6 +40,9 @@
   },
   "proxy": "http://localhost:9999/",
   "devDependencies": {
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
