간단한 회원가입 만들어 놨어요
아이디 중복체크와 비밀번호 인코딩 해야함

--- a/AInServer/ain/src/main/resources/application.properties
+++ b/AInServer/ain/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ain
 server.port=9999
 
 # 디비 연결
-spring.datasource.url=jdbc:postgresql://localhost:5432/ain
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=ain
 spring.datasource.username=ain
 spring.datasource.password=1234
 
@@ -21,3 +21,5 @@ logging.level.your.package.name.mapper=DEBUG
 # devtools
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
