--- a/AInServer/ain/src/main/resources/application.properties
+++ b/AInServer/ain/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
+
+# aws-key
