회원가입 시 비밀번호 인코딩 / 로그인 시 JWT 토큰 발급

--- a/AInServer/ain/build.gradle
+++ b/AInServer/ain/build.gradle
@@ -48,6 +48,16 @@ dependencies {
 
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+	// JWT 라이브러리
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	// Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// Spring Boot Configuration Processor
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 }
 
 tasks.named('test') {
