--- a/ain-react/package.json
+++ b/ain-react/package.json
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prestart": "node scripts/generate-html.js",
+    "prebuild": "node scripts/generate-html.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
