채팅방 구현중 및 cors 재설정
이제 헤더에 jwt포함하면 리액트에서도 됩니다

--- a/AInServer/ain/build.gradle
+++ b/AInServer/ain/build.gradle
@@ -58,6 +58,11 @@ dependencies {
 
 	// Spring Boot Configuration Processor
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+	// 웹 소켓
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+    implementation 'org.webjars:stomp-websocket:2.3.4'
 }
 
 tasks.named('test') {
