--- a/AInServer/ain/build.gradle
+++ b/AInServer/ain/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-messaging'
 	// Spring web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// lombok
