--- a/AInServer/ain/build.gradle
+++ b/AInServer/ain/build.gradle
@@ -64,6 +64,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.webjars:sockjs-client:1.5.1'
     implementation 'org.webjars:stomp-websocket:2.3.4'
+
+	// 페이징 임포트
+	implementation 'org.springframework.data:spring-data-commons'
 }
 
 tasks.named('test') {
