--- a/AInServer/ain/build.gradle
+++ b/AInServer/ain/build.gradle
@@ -67,6 +67,12 @@ dependencies {
 
 	// 페이징 임포트
 	implementation 'org.springframework.data:spring-data-commons'
+
+	// Dotenv
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+
+	// AWS
+	implementation 'software.amazon.awssdk:s3:2.20.43'
 }
 
 tasks.named('test') {
