--- a/AInServer/ain/.gitignore
+++ b/AInServer/ain/.gitignore
@@ -44,5 +44,5 @@ application-*.properties
 src/main/resources/application.properties
 src/main/resources/application-*.properties
 
-### .env(환경변수파일) ###
+### .env ###
 .env
