--- a/ain-react/package.json
+++ b/ain-react/package.json
@@ -22,6 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+      "start": "PORT=9999 react-scripts start",
     "prestart": "node scripts/generate-html.js",
     "prebuild": "node scripts/generate-html.js",
     "start": "react-scripts start",
