--- a/ain-react/package.json
+++ b/ain-react/package.json
@@ -18,6 +18,7 @@
     "react-toastify": "^10.0.6",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "toast": "^0.5.4",
     "web-vitals": "^2.1.4"
   },
