--- a/ain-react/package.json
+++ b/ain-react/package.json
@@ -15,6 +15,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^10.0.6",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
